name:                brainf-k
version:             0.1.0.0
synopsis:            A Brainf**k interpreter in haskell
homepage:            https://github.com/vikraman/brainf-k
license:             PublicDomain
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          vikraman.choudhury@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable brainf-k
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       mtl >=2.2 && <2.3,
                       word8 >=0.1 && <0.2,
                       parsec >=3.1 && <3.2
  default-language:    Haskell2010
